# tlaplus-py

./: .gitignore  README.md  justfile  pluspy.sh  pyproject.toml
modules/book/: Peterson.tla
pluspy/: __main__.py  ast.py  cli.py  errors.py  lexer.py  parser.py  pluspy.py  run_global_vars.py  runners.py  utils.py  wrappers.py
tests/: regres.sh  test_lexer.py  test_parser.py
tests/regression/: test1.sh  test10.sh  test11.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  test8.sh  test9.sh  test_regressions.py
